--- a/index.html
+++ b/index.html
@@ -49,17 +49,22 @@
         </section>
 
         <section class="skills">
+            <h1>My Skills</h1>
             <div class="progressBar">
                 <h4>HTML5</h4>
-                <div class="progressBarContainer"><div class="progressBarValue value-95"></div></div>
+                <div class="progressBarContainer"><div class="progressBarValue value-90"></div></div>
             </div>      
             <div class="progressBar">
                 <h4>CSS</h4>
-                <div class="progressBarContainer"><div class="progressBarValue value-79"></div></div>
+                <div class="progressBarContainer"><div class="progressBarValue value-70"></div></div>
             </div>
             <div class="progressBar">
                 <h4>JavaScript</h4>
-                <div class="progressBarContainer"><div class="progressBarValue value-85"></div></div>
+                <div class="progressBarContainer"><div class="progressBarValue value-80"></div></div>
+            </div>      
+            <div class="progressBar">
+                <h4>NodeJs</h4>
+                <div class="progressBarContainer"><div class="progressBarValue value-60"></div></div>
             </div>      
    
         </section>
