Added the last touches

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <li><a href="#">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#clients">Clients</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#clients">Clients</a></li>
                 <a class="btn primary" href="#contact">Contact</a>
             </ul>
         </div>
@@ -32,8 +32,8 @@
             <h1>Hey there, I'm <span>Khaled 👋</span><br>Web Developer</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum facere quia tenetur ipsum voluptates aperiam iure nemo eveniet optio soluta.</p>
             <div>
-                <a href="" class="btn primary">Contact</a>
-                <a href="" class="btn outline">Projects</a>    
+                <a href="#contact" class="btn primary">Contact</a>
+                <a href="#projects" class="btn outline">Projects</a>    
             </div>
         </div>
     </header>
@@ -44,7 +44,7 @@
             <div class="details">
                 <h1>About Me!</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima cupiditate veritatis dignissimos repellendus, reiciendis exercitationem molestiae nesciunt, nobis quod magnam similique magni, tempore error quo maxime voluptatem facere eos nihil mollitia numquam facilis nisi dolorum adipisci? Deserunt ut sapiente quidem debitis. Ab enim voluptatibus sint esse natus veritatis doloribus eveniet.</p><br>
-                <a href="" class="btn primary">Download my resume!</a>
+                <a href="./assets/downloads/cv.jpg" download="cv.jpg" class="btn primary">Download my resume!</a>
             </div>
         </section>
 
@@ -99,7 +99,7 @@
                     <div class="card-details">
                         <h2>Project Title</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti, unde.</p>
-                        <a href="" class="btn primary">Read More</a>
+                        <a href="https://dbrand.com/shop/special-edition/icons" target="_blank" class="btn primary">Read More</a>
                     </div>
                 </div>
     
@@ -142,7 +142,7 @@
                 <input type="text" placeholder="Subject" required>
                 <input type="email" placeholder="Email Address" required>
                 <textarea name="message" rows="10" cols="0" placeholder="Your Message" required></textarea>
-                <a href="#" class="btn primary">Submit!</a>
+                <input type="submit" style="border: none; padding: 10px 20px;" class="btn primary" value="Submit!">
             </form><br>
 
             <h2>Or Catch Me Up Here!</h2>
